tests/Tree/negative/test011.jvt
-- calling unsupported anoma-encode

function main() : * {
  anoma-encode(1)
}
